test/resources/parser/failing/DoubleQualifier.scala
object Q {
    Std.Std.name(1)
}